Version: 0.0.7
Date: ????
  Info:
    - Pull the robot_order_queue into lua
    - Check for all networks, for all surfaces, for all forces, and profile it
    - Profile some more
    - Trigger a created event for new construction bots, so we won't need to check every network in existance
    - Improve performance by like a quadrillion that way
    - Attempt to optimize the if orders
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2024. 11. 04
  Info:
    - Begin the animation when a robot's next order is to pick up construction items
    - Stash version uploaded to https://forums.factorio.com/viewtopic.php?f=7&t=119764
    - Cleanup 〃
    - Bump version and abandon till 2.0.15
    - Abandon till 2.0.16 (https://forums.factorio.com/119764)
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2024. 11. 04
  Info:
    - Keep the render object invisible until it is set to frame 0 again
    - Variable for how long to wait with removing the scaffold after everything is done
    - Satisfactory finish to the animation
    - Refractor animation end
    - Cleanup the global struct when the animation is entirely done
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2024. 11. 03
  Info:
    - Make the mod require space age/travel (for the platform construction animation)
    - Make the space platform build animations usable in luarendering
    - Animation offset my ass
    - Fix the animation offset being based on the current game tick
    - Cleanup the animation trial and error
    - Run the animation for each of the entity's tiles
    - Draw the appropriate piece based on the offset
    - Do not trigger on platforms
    - Use the correct render layers
    - Control the pacing of the animation entirely from lua
    - Move some magic numbers to constants