@@ -8,6 +8,7 @@ Date: ????
     - Trigger a created event for new construction bots, so we won't need to check every network in existance
     - Improve performance by like a quadrillion that way
     - Attempt to optimize the if orders
+    - Keep it simple and only check for the current order
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.6
 Date: 2024. 11. 04
